<resources>
    <string name="app_name">Secure Gate</string>
    <string name="mobile_no">Mobile No</string>
    <string name="error">Something went wrong!</string>
    <string name="network_error">Opps! Slow internet connection.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity">Activity</string>
    <string name="household">Household</string>
    <string name="community">Community</string>
    <string name="residents">Residents</string>
    <string name="emergency_no_s">Emergency No\'s</string>
    <string name="local_services">Local Services</string>
    <string name="notice_board">Notice Board</string>
    <string name="owner">Owner</string>
    <string name="rental">Rental</string>
    <string name="submit">Submit</string>
    <string name="otp">Enter One Time Password (OTP)</string>
    <string name="otpmessage">One Time Password (OTP) has been send to your mobile number, please enter the same here to login</string>
    <string name="exit_alert">Press again to exit!</string>
    <string name="transition_arrow">transition_arrow</string>
    <string name="transition_tvMoving">transition_tvMoving</string>
    <string name="transition_ivFlag">transition_ivFlag</string>
    <string name="transition_tvCode">transition_tvCode</string>
    <string name="transition_tvPhoneNo">transition_tvPhoneNo</string>
    <string name="transition_llPhone">transition_llPhone</string>
    <string name="enter_no">Enter your mobile number</string>
    <string name="add_member">Add Member</string>
    <string name="create_req">Create Request</string>
    <string name="member_name">Member Name</string>
    <string name="add">+ ADD</string>
    <string name="add_flat">Add Flat</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="purpose">Purpose</string>
    <string name="known">Known</string>
    <string name="register">Register</string>
    <string name="approved">Approved</string>
    <string name="date_and_time">Date and Time</string>
    <string name="enter_otp">Please enter OTP.</string>
    <string name="no_flat">Opps, No Flat found</string>
    <string name="invalid_session">Invalid session.</string>
    <string name="flat_approval">Please wait, Your flat approval is pending..</string>
    <string name="office_approval">Please wait, Your office approval is pending..</string>
    <string name="logout">Logout</string>
    <string name="verify">Verify</string>
    <string name="select_time">Select Time</string>
    <string name="entry_time">Entry time</string>
    <string name="exit_time">Exit time</string>
    <string name="no_request_found">No request found.</string>
    <string name="no_loc_service">No local service found.</string>
    <string name="once">Once</string>
    <string name="category_places">Frequent</string>
    <string name="time_error">Please select end time after start time.</string>

    <string-array name="days_of_months">
        <item>7 Days</item>
        <item>15 Days</item>
        <item>30 Days</item>
    </string-array>

</resources>
