<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootFrame">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llphone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:paddingTop="80dp"
        android:orientation="vertical"
        android:transitionName="@string/transition_llPhone"
        >

        <TextView
            android:id="@+id/tvMoving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/_13sdp"
            android:text="@string/enter_no"
            android:textColor="#262626"
            android:background="@null"
            android:textColorHint="#DADBDF"
            android:textSize="18sp"
            android:fontFamily="@font/opensans_regular"
            android:transitionName="@string/transition_tvPhoneNo" />

        <LinearLayout
            android:id="@+id/llInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivFlag"
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/flag"
                android:transitionName="@string/transition_ivFlag" />

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="+91"
                android:fontFamily="@font/opensans_regular"
                android:textColor="#0E0E0E"
                android:textSize="18sp"
                android:transitionName="@string/transition_tvCode" />

            <EditText
                android:id="@+id/etPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:cursorVisible="true"
                android:hint="xxxxx xxxxx"
                android:background="@null"
                android:fontFamily="@font/opensans_regular"
                android:inputType="phone"
                android:textColorHint="#DADBDF"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="@dimen/_12sdp"
        android:transitionName="@string/transition_arrow"
        android:src="@drawable/ic_arrow_back_black_24dp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/app_logo"
            android:id="@+id/loginwithphoneimg"
            android:padding="@dimen/_20sdp"
            android:visibility="gone"/>

    </RelativeLayout>

</FrameLayout>