<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    tools:context=".dashboard.ui.CreateRequest">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/name"
                    android:id="@+id/ed_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:hint="@string/mobile_no"
                    android:id="@+id/number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/address"
                    android:id="@+id/address"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/purpose"
                    android:id="@+id/purpose"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/date_and_time"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/gray_btn_bg_color"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_13sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/_10sdp">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/known"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_mono"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:text="@string/known"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/approved"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_mono"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:text="@string/approved"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>