<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".dashboard.ui.ThirdFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:layout_margin="@dimen/_13sdp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_services"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local_services"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_mono"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:layout_margin="@dimen/_13sdp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_notice"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_board"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_mono"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:layout_margin="@dimen/_13sdp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_residents"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/residents"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_mono"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:layout_margin="@dimen/_13sdp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_emergency"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_no_s"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_mono"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>